--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@ permalink: /tags/
 {% assign tag_words = site_tags | split:',' | sort %}
 
 <section class="blog-tags">
-  <h1>Tags in Blog</h1>
+  <h1>Les Tags du Blog</h1>
   <ul class="tags">
 <!--  cycles through tag list and creates header row of all tags used in site with accompanying per-tag counts...-->
   {% for item in (0..site.tags.size) %}{% unless forloop.last %}
@@ -15,6 +15,7 @@ permalink: /tags/
     <li ><a href="#{{ this_word | cgi_escape }}" class="tag">{{ this_word }} <span>({{ site.tags[this_word].size }})</span></a></li>
   {% endunless %}{% endfor %}
   </ul>
+  
 <!--cycles through tag list and creates subheader for each tag name...-->
   {% for item in (0..site.tags.size) %}{% unless forloop.last %}
     {% capture this_word %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
